<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".activity.LoginActivity"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/iv_app_ic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/iv_app_ic_login" />
    <TextView
        android:id="@+id/tv_account_type_act_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="系统登录"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/et_username_act_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editTextHeight"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_account_input"
        android:gravity="center_vertical|start"
        android:hint="@string/account_number"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="24sp"
        tools:ignore="TextFields" />


    <EditText
        android:id="@+id/et_password_act_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editTextHeight"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_account_input"
        android:gravity="center_vertical|start"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/editTextPadding"
        android:paddingEnd="@dimen/editTextPadding"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="@dimen/title_text_size"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/btn_login_act_login"
        style="@style/btn_blue_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/editTextMargin"
        android:text="@string/login"
        android:textSize="@dimen/title_text_size" />

    <TextView
        android:id="@+id/tv_app_custom_act_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/custom_name"
        android:textColor="@color/white"
        android:textSize="@dimen/title_text_size" />

    <TextView
        android:id="@+id/tv_app_name_act_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/title_text_size" />


</LinearLayout>