<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="vertical">
    <!--加一个隔断框-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/grey"/>
    <!--出厂编号-->
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/calInfor_devNo"
            android:textSize="@dimen/normal_text_size" />

        <TextView
            android:id="@+id/local_search_devNo_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text=""
            android:textSize="@dimen/normal_text_size"
            />
    </LinearLayout>
    <!--检定时间-->
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/calInfor_date"
            android:textSize="@dimen/normal_text_size" />

        <TextView
            android:id="@+id/local_search_date_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text=""
            android:textSize="@dimen/normal_text_size"
            />
    </LinearLayout>
    <!--检定记录模板名称-->
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/local_search_tableTemplateName"
            android:textSize="@dimen/normal_text_size" />

        <TextView
            android:id="@+id/local_search_template_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text=""
            android:textSize="@dimen/normal_text_size" />
    </LinearLayout>
    <!--客户名称-->
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/aux_customer"
            android:textSize="@dimen/normal_text_size" />
        <TextView
            android:id="@+id/local_search_customer_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text=""
            android:textSize="@dimen/normal_text_size" />
    </LinearLayout>
    <!--制造厂家-->
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/aux_manufacturer"
            android:textSize="@dimen/normal_text_size" />
        <TextView
            android:id="@+id/local_search_manufacturer_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text=""
            android:textSize="@dimen/normal_text_size" />
    </LinearLayout>
    <!--文件名称-->
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/calInfor_filepath"
            android:textSize="@dimen/normal_text_size" />
        <TextView
            android:id="@+id/local_search_file_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text=""
            android:textSize="@dimen/normal_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_local_search_openTable"
            style="@style/btn_blue_style"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/calInfor_openTable" />

        <Button
            android:id="@+id/btn_local_search_exportTable"
            style="@style/btn_blue_style"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/calInfor_exportTable" />
        <Button
            android:id="@+id/btn_local_search_delete"
            style="@style/btn_blue_style"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/local_search_deleteTable" />
    </LinearLayout>
</LinearLayout>