<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.local_search.LocalSearchFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!--出厂编号-->
        <EditText
            android:id="@+id/local_search_devno"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:hint="@string/controller_search_devno"
            android:inputType="text"
            android:textSize="@dimen/normal_text_size"
            android:importantForAutofill="no" />
        <!--搜索按钮-->
        <ImageButton
            android:id="@+id/local_search_searchBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="centerCrop"
            android:tooltipText="@string/controller_search_searchBtnTip"
            app:srcCompat="@drawable/bg_search_button"
            android:contentDescription="@string/controller_search_searchBtnTip" />
    </LinearLayout>
    <!--时间搜索框-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/local_search_startDateTimeTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:minHeight="48dp"
            android:gravity="center"
            android:textSize="@dimen/normal_text_size"
            android:background="@drawable/bg_backline"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:id="@+id/local_search_endDateTimeTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_weight="5"
            android:gravity="center"
            android:textSize="@dimen/normal_text_size"
            android:background="@drawable/bg_backline"
            android:layout_marginLeft="5dp"/>

        <ImageButton
            android:id="@+id/local_search_clearDateTime"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="centerCrop"
            android:tooltipText="@string/controller_search_clearDateTimeTip"
            app:srcCompat="@drawable/bg_clear_button"
            android:contentDescription="@string/controller_search_clearDateTimeTip" />
    </LinearLayout>
    <!--客户名称，制造厂家-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <EditText
            android:id="@+id/local_search_customer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/local_search_customer"
            android:inputType="text"
            android:textSize="@dimen/normal_text_size"
            android:minHeight="48dp"
            android:importantForAutofill="no" />
        <EditText
            android:id="@+id/local_search_manufacturer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/local_search_manufacturer"
            android:inputType="text"
            android:textSize="@dimen/normal_text_size"
            android:minHeight="48dp"
            android:importantForAutofill="no" />
    </LinearLayout>
    <!--提示文本-->
    <TextView
        android:id="@+id/text_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/local_search_recycleview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" />
</LinearLayout>